<?xml version="1.0"?>
<package format="3">
  <name>mav_imu</name>
  <version>0.0.0</version>
  <description>The mav_imu package</description>
  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
</package>